# mcp-server-atlassian

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  main.py  pyproject.toml
.adr/: 001-tool-naming-convention.md  002-mcp-server-framework.md  003-result-pattern.md  004-logging-architecture.md  005-structured-tool-command-schema.md
.github/workflows/: python-mcp-test.yml
src/mcp_server_atlassian/: __init__.py  __main__.py  auth.py  cli.py  config.py  error_context.py  main.py  mcp_log.py  mcp_log_filter.py  result.py  server.py  signal.py  tools.py
tests/: conftest.py  test_application_logging.py  test_async_main.py  test_auth.py  test_cli_basic.py  test_cli_integration.py  test_cli_security.py  test_config.py  test_config_error_handling.py  test_error_context.py  test_mcp_log.py  test_mcp_log_advanced.py  test_mcp_log_filter.py  test_package_import.py  test_server.py  test_signal_handling.py  test_tool_error_handling.py  test_tools.py  test_tools_advanced.py
